--- a/public/show.html
+++ b/public/show.html
@@ -16,7 +16,7 @@ Show
         }
     </style>
 
-<video id='showVideo' muted autoplay controls='false' allowfullscreen></video>
+<video id='showVideo' muted autoplay controls='false' allowfullscreen src=''></video>
 
 </body>
 
