--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,7 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-       
-
-        <form id="createRoom">
-             <h1>Start a room</h1>
-            <input id="sessionInput"/>
-            <button type="submit">Create it!</button>
-        </form>
-
-        <script src="osc-browser.js"></script>
+        <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
         <script src="bundle.js"></script>
 
     
